--- a/angellabs-main/angellabs/pom.xml
+++ b/angellabs-main/angellabs/pom.xml
@@ -11,17 +11,17 @@
   <description>angellabs</description>
   <dependencies>
   <dependency>
-			<groupId>com.angellabs.www</groupId>
+			<groupId>co.angellabs</groupId>
 			<artifactId>framework</artifactId>
 			<version>framework</version>
 		</dependency>
 		<dependency>
-			<groupId>com.angellabs.www</groupId>
+			<groupId>co.angellabs</groupId>
 			<artifactId>angellabs-entities</artifactId>
 			<version>entities</version>
 		</dependency>
 		<dependency>
-			<groupId>com.angellabs.www</groupId>
+			<groupId>co.angellabs</groupId>
 			<artifactId>profileservices</artifactId>
 			<version>services</version>
 		</dependency>
