--- a/angellabs-main/profileservices/pom.xml
+++ b/angellabs-main/profileservices/pom.xml
@@ -11,12 +11,12 @@
   
   <dependencies>
    <dependency>
-			<groupId>com.angellabs.www</groupId>
+			<groupId>co.angellabs</groupId>
 			<artifactId>framework</artifactId>
 			<version>framework</version>
 		</dependency>
 		<dependency>
-			<groupId>com.angellabs.www</groupId>
+			<groupId>co.angellabs</groupId>
 			<artifactId>angellabs-entities</artifactId>
 			<version>entities</version>
 		</dependency>
